syntax = "proto3";

package pb;
option go_package ="./pb";


message Candle {
    uint64 Parity   = 1;
	uint64 Exchange = 2;
	uint64 Mts      = 3;
	string Open     = 4;
	string Close    = 5;
	string High     = 6;
	string Low      = 7;
	string Volume   = 8;
	string Roc      = 9;
}

message GetCandleFirstMtsRequest {
	uint64 parity = 1;
    uint64 exchange = 2;
}

message GetCandleFirstMtsResponse {
    repeated Candle candles = 1;
}

message GetLastTwoCandlesRequest {
	uint64 parity = 1;
    uint64 exchange = 2;
}

message GetLastTwoCandlesResponse {
    repeated Candle candles = 1;
}

message CreateCandlesRequest {
	repeated Candle candles = 1;
}

message CreateCandlesResponse {
	repeated Candle candles = 1;
}

message ListCandleLimitRequest {
	uint64 parity = 1;
	uint64 exchange = 2;
	uint64 limit = 3;
}

message ListCandleLimitResponse {
	repeated Candle candles = 1;
}

message ListAvgPricesRequest {
	uint64 to = 1;
	uint64 from = 2;
}

message ListAvgPricesResponse {
	repeated Candle candles = 1;
}

message GetFirstPriceRequest {
	uint64 parity = 1;
	uint64 exchange = 2;
	uint64 from = 3;
}

message GetFirstPriceResponse {
	string price = 1;
}

message GetLastPriceRequest {
	uint64 parity = 1;
	uint64 exchange = 2;
}

message GetLastPriceResponse {
	string price = 1;
}